[metadata]
name = stegx
version = 0.1.0
author = Rachit Patel
author_email = your-email@example.com
description = Hide messages or files inside images using LSB steganography with AES encryption.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<your-username>/stegx
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pillow
    cryptography
